--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
             <div class="form-input-model">
               <label for="mensagem">E-mail</label>
-              <textarea name="mensagem" id="mensagem"></textarea>
+              <textarea name="mensagem" placeholder = "Comment"id="mensagem"></textarea>
             </div>
 
             <input type="submit" value="Send">
